--- a/index.html
+++ b/index.html
@@ -1,52 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <title>
+      Frontend Mentor | Newsletter sign-up form with success message
+    </title>
+  </head>
+  <body>
+    <div class="container">
+      <!-- Sign-up form start -->
+      <div class="text-section">
+        <h1 class="title">Stay updated!</h1>
+        <p class="description">
+          Join 60,000+ product managers receiving monthly updates on:
+        </p>
+        <div class="list-section">
+          <div class="list">
+            <img src="/assets/images/icon-list.svg" alt="" class="list-icon" />
+            <p class="list-text">Product discovery and building what matters</p>
+          </div>
+          <div class="list">
+            <img src="/assets/images/icon-list.svg" alt="" class="list-icon" />
+            <p class="list-text">Measuring to ensure updates are a success</p>
+          </div>
+          <div class="list">
+            <img src="/assets/images/icon-list.svg" alt="" class="list-icon" />
+            <p class="list-text">And much more!</p>
+          </div>
+        </div>
+        <form action="/success.html">
+          <label for="email">Email address</label><br />
+          <span class="error"></span>
+          <input
+            type="email"
+            name="user_email"
+            id="emailId"
+            placeholder="email@company.com"
+          /><br />
+          <button type="submit" class="subscribe-button">
+            Subscribe to monthly newsletter
+          </button>
+        </form>
+      </div>
+      <!-- Sign-up form end -->
+      <picture class="photo-container">
+        <source
+          media="(max-width: 960px)"
+          srcset="/assets/images/illustration-sign-up-mobile.svg"
+        />
+        <img
+          class="photo"
+          src="/assets/images/illustration-sign-up-desktop.svg"
+          alt=""
+        />
+      </picture>
+    </div>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Newsletter sign-up form with success message</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  <!-- Sign-up form start -->
-
-  Stay updated!
-
-  Join 60,000+ product managers receiving monthly updates on:
-
-  Product discovery and building what matters
-  Measuring to ensure updates are a success
-  And much more!
-
-  Email address
-  email@company.com
-
-  Subscribe to monthly newsletter
-
-  <!-- Sign-up form end -->
-
-  <!-- Success message start -->
-
-  Thanks for subscribing!
-
-  A confirmation email has been sent to ash@loremcompany.com. 
-  Please open it and click the button inside to confirm your subscription.
-
-  Dismiss message
-
-  <!-- Success message end -->
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a href="https://www.frontendmentor.io/profile/MaruchetO">MaruchetO</a>.
+    </div>
+    <script src="script.js" type="module"></script>
+    <script></script>
+  </body>
 </html>
