Update path in html

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
         </p>
         <div class="list-section">
           <div class="list">
-            <img src="/assets/images/icon-list.svg" alt="" class="list-icon" />
+            <img src="./assets/images/icon-list.svg" alt="" class="list-icon" />
             <p class="list-text">Product discovery and building what matters</p>
           </div>
           <div class="list">
-            <img src="/assets/images/icon-list.svg" alt="" class="list-icon" />
+            <img src="./assets/images/icon-list.svg" alt="" class="list-icon" />
             <p class="list-text">Measuring to ensure updates are a success</p>
           </div>
           <div class="list">
-            <img src="/assets/images/icon-list.svg" alt="" class="list-icon" />
+            <img src="./assets/images/icon-list.svg" alt="" class="list-icon" />
             <p class="list-text">And much more!</p>
           </div>
         </div>
-        <form action="/success.html">
+        <form action="./success.html">
           <label for="email">Email address</label><br />
           <span class="error"></span>
           <input
@@ -54,11 +54,11 @@
       <picture class="photo-container">
         <source
           media="(max-width: 960px)"
-          srcset="/assets/images/illustration-sign-up-mobile.svg"
+          srcset="./assets/images/illustration-sign-up-mobile.svg"
         />
         <img
           class="photo"
-          src="/assets/images/illustration-sign-up-desktop.svg"
+          src="./assets/images/illustration-sign-up-desktop.svg"
           alt=""
         />
       </picture>
