Update path in html

--- a/success.html
+++ b/success.html
@@ -19,7 +19,7 @@
     <div class="success-card">
       <div class="success-text">
         <img
-          src="/assets/images/icon-success.svg"
+          src="./assets/images/icon-success.svg"
           alt=""
           class="success-icon"
         />
@@ -31,7 +31,10 @@
           subscription.
         </p>
       </div>
-      <form action="/index.html" class="form">
+      <form
+        action="/Newsletter-sign-up-form-with-success-message/index.html"
+        class="form"
+      >
         <button class="dismiss-button">Dismiss message</button>
       </form>
     </div>
